Changelog
=========

2.6b2 (unreleased)
------------------

- Nothing changed yet.


2.6b1 (2019-07-17)
------------------

- Adds support for Markdown long_descriptions, if you set
  long_description_content_type to 'text/markdown'

- Installs Pygments to avoid an error message of you have
  syntax highlighted code in the long_description.


2.5 (2019-06-01)
----------------

- Fixed #35: Correctly restore ``sys.argv``.  [maurits]

- Added back the BusFactor test, the XMLRPC API supports it.

- #26: Adding a test to check for a development status classifier.

- #21: Accept the new project_urls distribution data.

- Now verifies that classifiers are valid, and that the license field
  and license classifiers match.

- The rating now again reflects if the long_description isn't valid ReST.

- #38: Recommendations for the License field has changed.


2.4 (2018-08-15)
----------------

- Get rid of the tests that rely on HTML scraping, it's too brittle.

- Update to use pypi.org instead of pypi.python.org
  [Andreas Lutro, Lennart Regebro]

- Added -n command line option to set the minimum rating needed for pyroma
  to return success, useful in scripts.
  [Scott Colby]


2.3.1 (2018-05-28)
------------------

- Fixed #12: Installation fails with a non-UTF8 locale under Python 3.
  [ericof, 4383, regebro]


2.3 (2017-11-28)
----------------

- Check that a classifier specifies the project license. [4383]

- Dropped support for Python 2.6, 3.3 and 3.4.

- Fixed a unicode issue [gotcha]

- Stopped recommending places to keep documentation.


2.2 (2016-10-26)
----------------

- Removed the TestSuite rating. I decided it was too close to looking at
  code quality. Pyroma no longer cares if you have tests or not.

- Fixed #36: PyPI now requires https.


2.1 (2016-10-18)
----------------

- #35: Support for PEP-440.


2.0.2 (2016-03-06)
------------------

- Faked the __name__ variable to allow you to have a "if __name__" construct
  in the setup.py.


2.0.1 (2016-03-06)