@@ -1,7 +1,6 @@
 from __future__ import print_function
 import unittest
 import os
-import sys
 import collections
 
 try:
